[gd_scene load_steps=122 format=2]

[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0002.png" type="Texture" id=1]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0003.png" type="Texture" id=2]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0001.png" type="Texture" id=3]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0007.png" type="Texture" id=4]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0015.png" type="Texture" id=5]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0005.png" type="Texture" id=6]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0014.png" type="Texture" id=7]
[ext_resource path="res://Scripts/BossStage2.gd" type="Script" id=8]
[ext_resource path="res://Sounds/mixkit-laser-cannon-shot-1678.wav" type="AudioStream" id=9]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0036.png" type="Texture" id=10]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0028.png" type="Texture" id=11]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0034.png" type="Texture" id=12]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0022.png" type="Texture" id=13]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0019.png" type="Texture" id=14]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0024.png" type="Texture" id=15]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0008.png" type="Texture" id=16]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0004.png" type="Texture" id=17]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0006.png" type="Texture" id=18]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0018.png" type="Texture" id=19]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0025.png" type="Texture" id=20]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0010.png" type="Texture" id=21]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0026.png" type="Texture" id=22]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0033.png" type="Texture" id=23]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0020.png" type="Texture" id=24]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0021.png" type="Texture" id=25]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0023.png" type="Texture" id=26]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0027.png" type="Texture" id=27]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0016.png" type="Texture" id=28]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0017.png" type="Texture" id=29]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0032.png" type="Texture" id=30]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0029.png" type="Texture" id=31]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0011.png" type="Texture" id=32]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0030.png" type="Texture" id=33]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0031.png" type="Texture" id=34]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0009.png" type="Texture" id=35]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0012.png" type="Texture" id=36]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0035.png" type="Texture" id=37]
[ext_resource path="res://Sprites/bossmanputtingonglasses/bossmanputtingonglasses0013.png" type="Texture" id=38]
[ext_resource path="res://Scripts/HealthBar2.gd" type="Script" id=39]
[ext_resource path="res://Sprites/Bar.png.png" type="Texture" id=40]
[ext_resource path="res://Bar2.png.png" type="Texture" id=41]
[ext_resource path="res://Sprites/New Piskel-1.png.png" type="Texture" id=42]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0044.png" type="Texture" id=43]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0031.png" type="Texture" id=44]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0032.png" type="Texture" id=45]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0034.png" type="Texture" id=46]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0035.png" type="Texture" id=47]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0037.png" type="Texture" id=48]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0038.png" type="Texture" id=49]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0036.png" type="Texture" id=50]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0045.png" type="Texture" id=51]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0046.png" type="Texture" id=52]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0048.png" type="Texture" id=53]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0049.png" type="Texture" id=54]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0050.png" type="Texture" id=55]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0051.png" type="Texture" id=56]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0053.png" type="Texture" id=57]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0054.png" type="Texture" id=58]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0055.png" type="Texture" id=59]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0056.png" type="Texture" id=60]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0057.png" type="Texture" id=61]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0059.png" type="Texture" id=62]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0029.png" type="Texture" id=63]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0030.png" type="Texture" id=64]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0028.png" type="Texture" id=65]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0027.png" type="Texture" id=66]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0014.png" type="Texture" id=67]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0015.png" type="Texture" id=68]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0016.png" type="Texture" id=69]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0017.png" type="Texture" id=70]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0018.png" type="Texture" id=71]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0060.png" type="Texture" id=72]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0061.png" type="Texture" id=73]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0063.png" type="Texture" id=74]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0064.png" type="Texture" id=75]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0066.png" type="Texture" id=76]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0065.png" type="Texture" id=77]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0067.png" type="Texture" id=78]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0068.png" type="Texture" id=79]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0069.png" type="Texture" id=80]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0071.png" type="Texture" id=81]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0073.png" type="Texture" id=82]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0074.png" type="Texture" id=83]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0042.png" type="Texture" id=84]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0019.png" type="Texture" id=85]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0020.png" type="Texture" id=86]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0021.png" type="Texture" id=87]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0022.png" type="Texture" id=88]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0023.png" type="Texture" id=89]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0024.png" type="Texture" id=90]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0025.png" type="Texture" id=91]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0026.png" type="Texture" id=92]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0039.png" type="Texture" id=93]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0040.png" type="Texture" id=94]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0041.png" type="Texture" id=95]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0043.png" type="Texture" id=96]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0033.png" type="Texture" id=97]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0047.png" type="Texture" id=98]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0070.png" type="Texture" id=99]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0072.png" type="Texture" id=100]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0075.png" type="Texture" id=101]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0058.png" type="Texture" id=102]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0052.png" type="Texture" id=103]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0005.png" type="Texture" id=104]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0004.png" type="Texture" id=105]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0006.png" type="Texture" id=106]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0001.png" type="Texture" id=107]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0002.png" type="Texture" id=108]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0003.png" type="Texture" id=109]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0013.png" type="Texture" id=110]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0011.png" type="Texture" id=111]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0007.png" type="Texture" id=112]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0008.png" type="Texture" id=113]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0009.png" type="Texture" id=114]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0010.png" type="Texture" id=115]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0012.png" type="Texture" id=116]
[ext_resource path="res://Sprites/epicxplosionframes/epicexplostionwow0062.png" type="Texture" id=117]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 69.5, 189.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 673, 485.625 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 206.5, 120.5 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 105 ), ExtResource( 104 ), ExtResource( 106 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 111 ), ExtResource( 116 ), ExtResource( 110 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 66 ), ExtResource( 65 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 97 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 84 ), ExtResource( 96 ), ExtResource( 43 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 98 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 103 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 102 ), ExtResource( 62 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 117 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 77 ), ExtResource( 76 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 99 ), ExtResource( 81 ), ExtResource( 100 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 101 ) ],
"loop": false,
"name": "New Anim",
"speed": 17.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 18 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 35 ), ExtResource( 21 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 13 ), ExtResource( 26 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 11 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 30 ), ExtResource( 23 ), ExtResource( 12 ), ExtResource( 37 ), ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[node name="BossStage2" type="KinematicBody2D"]
position = Vector2( -59, -19 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 37, 155 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -517, -140 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="KillZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2( 37, 221 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.580392, 0, 0, 1 )
position = Vector2( -152, -41 )
scale = Vector2( 0.717487, 0.717487 )
frames = SubResource( 6 )
animation = "New Anim"

[node name="Timer2" type="Timer" parent="."]

[node name="HealthBar" type="Control" parent="."]
margin_left = -71.0
margin_top = -189.0
margin_right = -31.0
margin_bottom = -149.0
script = ExtResource( 39 )

[node name="TextureProgress" type="TextureProgress" parent="HealthBar"]
margin_right = 40.0
margin_bottom = 40.0
min_value = -4.0
max_value = 30.0
value = 30.0
texture_under = ExtResource( 42 )
texture_over = ExtResource( 40 )
texture_progress = ExtResource( 41 )
tint_progress = Color( 0.321569, 0.772549, 0.0941176, 1 )

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2( 37, 113 )
emitting = false
amount = 20
lifetime = 0.3
one_shot = true
explosiveness = 1.0
direction = Vector2( 0, 2 )
spread = 83.12
initial_velocity = 543.04
initial_velocity_random = 1.0
scale_amount = 9.69
color = Color( 0.807843, 0.352941, 0.105882, 1 )

[node name="Timer3" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="KillZone" to="." method="_on_KillZone_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
